log
Thu 21 Mar 2024 08:12:54 PM UTC: 
 tests:  0|5
total_score: 0/70
1d92077
Thu 21 Mar 2024 08:20:29 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:8: error: ‘i’ undeclared (first use in this function)
   46 |   for (i = 1 ; i < 11 ; i++){
      |        ^
exercises.c:46:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
8fa2e66
Thu 21 Mar 2024 08:21:15 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
d39d210
Thu 21 Mar 2024 08:21:47 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
3a5aa97
Thu 21 Mar 2024 08:27:22 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:5: error: ‘elemetos’ undeclared (first use in this function); did you mean ‘elementos’?
   64 |     elemetos += *(int*)first(L);
      |     ^~~~~~~~
      |     elementos
exercises.c:64:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c4fad77
